--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -433,7 +433,8 @@
                                 width: 19%;
                             }
                             &.review-btn{
-                                width: 35%;
+                                // width: 35%;
+                                width: 50%;
                                 text-align: right;
                                 display: flex;
                                 align-items: center;
