--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -166,11 +166,11 @@
                     <div class="header-info-que" *ngIf="selectedFaq && selectedFaq.state === 'draft'">
                         <div class="col_ p-0 source" ngbTooltip="{{(selectedFaq.resource || contentTypes[selectedFaq.source]) | titlecase}}" placement="top">
                             <div class="heading">Source</div>
-                            <div class="info-title">{{(selectedFaq.resource || contentTypes[selectedFaq.source]) | titlecase}}</div>
+                            <div class="info-title">{{(selectedFaq.resource || contentTypes[selectedFaq.source] || 'Manual') | titlecase}}</div>
                         </div>
                         <div class="col_ p-0 type" ngbTooltip="{{(selectedFaq.resource || contentTypes[selectedFaq.source]) | titlecase}}" placement="top">
                             <div class="heading">Type</div>
-                            <div class="info-title">{{contentTypes[selectedFaq.source] | titlecase}}</div>
+                            <div class="info-title">{{(contentTypes[selectedFaq.source] || 'Manual') | titlecase}}</div>
                         </div>
                         <div class="col_ p-0" ngbTooltip="{{selectedFaq.userDetails?selectedFaq.userDetails.fullName:'---'}}" placement="top">
                             <div class="heading">Created</div>
@@ -178,11 +178,12 @@
                         </div>
                         <div class="col_ p-0 review-btn">
                             <button class="kr-sg-button-primary btn_lg" (click)="updateFaq(selectedFaq,'stateUpdate','in_review')" >Send for Review</button>
+                            <div class="comments-img">
+                                <img class="cursor" src="assets/icons/comment.svg">
+                            </div> 
                             <img src="assets/icons/delete-table.svg" class="cursor" (click)="deleteInfividualQuestion(selectedFaq)" ngbTooltip='Delete' >
                         </div>    
-                        <div class="comments-img">
-                            <img class="cursor" src="assets/icons/comment.svg">
-                        </div>                
+                                      
                     </div>
                     <div class="header-info-que with-info" *ngIf="selectedFaq && selectedFaq.state === 'approved'">
                         <div class="col-2 p-0" ngbTooltip='{{(selectedFaq.resource || contentTypes[selectedFaq.source]) | titlecase}}'  placement="top">
@@ -205,6 +206,9 @@
                             <div class="heading">Approved at</div>
                             <div class="info-title">{{selectedFaq.modifiedOn | dateFormatPipe:'MM-DD-YYYY hh:mm:ss'}}</div>
                         </div>
+                        <div class="comments-img">
+                            <img class="cursor" src="assets/icons/comment.svg">
+                        </div>  
                         <div class="kr-sg-dropdowns elipse-dropdown col-1" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle data-toggle="dropdown"><img src="assets/icons/elipse.svg"></button>                                            
@@ -215,9 +219,6 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="comments-img">
-                            <img class="cursor" src="assets/icons/comment.svg">
-                        </div>  
                     </div>
                     <perfect-scrollbar class="train-questions-body-scroll" #editQaScrollContainer>               
                         <div class="body-content" id="questionList">
