hide the buttons for alternate/followup question

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -113,8 +113,8 @@
       </div>
       <div class="right-btns">        
         <button class="kr-sg-button-secondary btn_lg mr-0 d-none"><img src="assets/icons/editor/plus-add.svg" class="mr-2">Another Bot Response</button>
-        <button class="kr-sg-button-tertiary" (click)='addAltQues()'>Add Alternate Question</button>
-        <button class="kr-sg-button-tertiary" (click)='addFollowupQues()'>Add Followup Question</button>
+        <button class="kr-sg-button-tertiary d-none" (click)='addAltQues()'>Add Alternate Question</button>
+        <button class="kr-sg-button-tertiary d-none" (click)='addFollowupQues()'>Add Followup Question</button>
       </div>
     </div>
   </form>
