--- a/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
+++ b/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
@@ -1,4 +1,4 @@
-<div class="ml-threshold-container">
+<div class="ml-threshold-container row">
     <perfect-scrollbar class="accordian-content-sec">
         <div class="SMtrainDiv ml-threshold-train" *ngIf="true">
             <div class="helphint col-xs-12 marginB20T0">
@@ -51,6 +51,14 @@
                             <input type="checkbox" checked>
                             <div class="slider"> <span class="no">Disable</span><span class="yes">Enable</span></div>
                         </label>
+                    </div>
+                    <div class="protip-info">
+                        <div class="bulb-icon">
+                            <img class="layer" src='assets/images/24x29-bulbicon.png'>
+                        </div>
+                        <div class="info-tip">
+                            The Fundamental Meaning and the Ranking and Resolver engines are using the Dependency Parsing model for intent identification and scoring. You can customize the configuration
+                        </div>
                     </div>
                 </div>
             </div>
