--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -1,4 +1,4 @@
-<div class="traits-container">
+<div class="traits-container row">
     <perfect-scrollbar class="perfect-scroll">
         <!-- NO DATA FOUND -->
         <div *ngIf="true" class="noTraits">
