--- a/findly-builder/src/app/components/add-alt-faq/add-alt-faq.component.scss
+++ b/findly-builder/src/app/components/add-alt-faq/add-alt-faq.component.scss
@@ -37,13 +37,17 @@
                 .mat-chip-list{
                     .mat-chip-list-wrapper{
                         border-radius: 3px;
-                        border: solid 1px #e5e8ec;        
+                        border: solid 1px #BDC1C6;       
                         margin: 0;
                         font-family: Inter !important;
                         .mat-input-element{
                             margin: 0;
                             border: 0;
                             height: 32px;
+                            &:focus{   
+                                border: 0 !important;                             
+                                outline: 0 !important;
+                            }
                         }
                         .mat-chip{
                             border-radius: 4px;
@@ -70,7 +74,7 @@
                                     height: 11px;
                                     vertical-align: middle;
                                     position: relative;
-                                    top: 0px;
+                                    top: -1px;
                                     left: 2px;
                                 }
                             }
