--- a/findly-builder/src/app/components/manage-intent/manage-intent.component.scss
+++ b/findly-builder/src/app/components/manage-intent/manage-intent.component.scss
@@ -386,13 +386,17 @@
                 .mat-chip-list{
                     .mat-chip-list-wrapper{
                         border-radius: 3px;
-                        border: solid 1px #e5e8ec;        
+                        border: solid 1px #BDC1C6;       
                         margin: 0;
                         font-family: Inter !important;
                         .mat-input-element{
                             margin: 0;
                             border: 0;
                             height: 32px;
+                            &:focus{   
+                                border: 0 !important;                             
+                                outline: 0 !important;
+                            }
                         }
                         .mat-chip{
                             border-radius: 4px;
@@ -419,7 +423,7 @@
                                     height: 11px;
                                     vertical-align: middle;
                                     position: relative;
-                                    top: 0px;
+                                    top: -1px;
                                     left: 2px;
                                 }
                             }
@@ -446,7 +450,7 @@
     .mat-form-field-underline{
         display: none;
     }
-} 
+}  
 
 .mainLoadingSpinner{
     position: absolute;
