--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -35,16 +35,16 @@
 }
 .search-background-div{
     width: 100%;
-    height: calc(100% - 80px);
+    height: calc(100% - 63px);
     background: #ffffff;
     position: absolute;
-    top: 80px;
+    top: 63px;
     border: 0;
     display: none;
     z-index: 999;
 }
 .search-container #searchChatContainer{
-    height: calc(100vh - 243px);
+    height: calc(100vh - 230px);
 }
 #searchChatContainer .action-wrp{
     /* display: block !important; */
@@ -135,6 +135,7 @@ img.logo-img{
     top: 80px;
     z-index: 999;
     left: 762px;
+    display: none !important;
   }
   .kr-sg-toggle.advancemode-checkbox .slider{
     background-color: #D9D9D9;
