ml and traits merged to

--- a/findly-builder/src/app/app.component.scss
+++ b/findly-builder/src/app/app.component.scss
@@ -11,7 +11,13 @@
     .autoSearchTools{
         display: none;
     }
+    .trainBlock{
+        display: none;
+    }
     &.appSelected{
+        .trainBlock{
+            display: block !important;
+        }
         .toShowAppHeader{
             display: block !important;
         }
