--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -16,7 +16,7 @@
                         <img src="assets/images/close.svg" class="search-icon" (click)="toggleSearch(false)">
                     </div>
                 </li>   
-                <div class="col-2 p-0 text-right nav-item pr-4 mr-2">
+                <div class="p-0 text-right nav-item pr-4 mr-2 trainBlock">
                     <button class="kr-sg-button-primary btn_lg" (click)="train()">Train</button>
                 </div>         
                 <li class="nav-item pr-4 mr-2">
