--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -472,7 +472,8 @@
                     .train-questions-body-scroll{
                         height: calc(100vh - 226px);
                     }
-                    .body-content{                        
+                    .body-content{      
+                        padding-bottom: 50px;                  
                         .body-top-content{
                             padding: 20px 30px 0 30px;
                         }
