--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -28,7 +28,7 @@
               [(ngModel)]="newSourceObj.name" class="input-text" required>
           </div>
           <div class="kr-sg-input-text-area mb-3">
-            <div class="label-text">Discription</div>
+            <div class="label-text">Description</div>
             <textarea autocomplete="off" [(ngModel)]="newSourceObj.desc" name="sourceDesc" placeholder="Enter description"
               class="input-text"></textarea>
           </div>
