--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -70,8 +70,8 @@
           <input maxlength="128" type="text" placeholder="App name" class="input-text" [(ngModel)]="newApp.name" name="appName">
         </div>
         <div class="kr-sg-input-text-area mb-2">
-          <div class="label-text">Discription</div>
-          <textarea maxlength="512" placeholder="App discription" class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
+          <div class="label-text">Description</div>
+          <textarea maxlength="512" placeholder="App description " class="input-text" [(ngModel)]="newApp.description" name="appDesc"></textarea>
         </div>
         <div class="kr-sg-dropdowns w-100 mt-1">
           <div class="label-text">Language</div>
